[package]
name = "deadlocked"
version = "4.2.0"
edition = "2024"

[dependencies]
bytemuck = "1.22"
egui = "0.32"
egui_glow = { version = "0.32", features = ["winit"] }
egui-winit = {version="0.32",default-features = false,features = ["x11"]}
env_logger = { version = "0.11", default-features = false }
epaint = { version = "0.32", features = ["serde"] }
glam = { version = "0.30", features = ["bytemuck"] }
glutin = "0.32"
glutin-winit = "0.5"
log = "0.4"
nix = { version = "0.30", features = ["ioctl"] }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
toml = "0.8"
winit = { version = "0.30", default-features = false, features = ["x11"] }

[profile.release]
lto = true
strip = "debuginfo"
