[package]
name = "deadlocked"
version = "4.2.0"
edition = "2024"

[dependencies]
bincode = {version = "2.0",features = ["std", "serde"]}
bytemuck = "1.22"
egui = "0.32"
egui_glow = { version = "0.32", features = ["winit"] }
egui-winit = { version = "0.32", default-features = false, features = ["x11"] }
env_logger = { version = "0.11", default-features = false }
epaint = { version = "0.32", features = ["serde"] }
glam = { version = "0.30", features = ["bytemuck", "serde"] }
glutin = "0.32"
glutin-winit = "0.5"
log = "0.4"
mlua = { version = "0.11", features = ["lua54", "vendored"] }
nix = { version = "0.30", features = ["ioctl"] }
rand = "0.9"
rand_distr = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
strum = { version = "0.27", features = ["derive"] }
toml = "0.8"
ureq = { version = "3.0", features = ["json"] }
winit = { version = "0.30", default-features = false, features = ["x11"] }

[profile.release]
lto = true
strip = "debuginfo"
